--- a/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/心得回饋.html
+++ b/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/心得回饋.html
@@ -5,17 +5,16 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/1.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">資工系：高于梵</span>
+                <span class="collaborative-partner-feedback-author">建築二：盧旻慧</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(0)"
             style="cursor: pointer;">
             <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content">
-                在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的
-                過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
+                那天，從一個繁忙的都市到一座寧靜的山林裡。山林雲霧繚繞，跟著同學從山腳走到山頂，沿路中穿梭著不同的樹蔭，感受著不同的光影，但山坡路陡的讓我們爬得汗流浹背，到禱告殿的那剎那，心中只倍感欣慰，因為「終於到了！」在禱告殿的周圍走著，觀察這裡的特色，聽著長老的解說，腦海想著各式各樣的想法。第一次面對真實的業主；第一次面對這樣山頂的地形；第一次設計精神性的建築。能這樣在學校的設計題目中擁有這樣的機會真的很難得。
             </p>
         </div>
         <div class="col-xl-2 d-none d-xl-block"></div>
@@ -26,23 +25,23 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
+                <span class="collaborative-partner-feedback-author">建築三：王蘭昊</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(1)"
             style="cursor: pointer;">
             <div class="right-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content">
-                先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。
+                這天我們收到新的設計題目，搭上小巴士前往位於新竹的石磊部落，步行在綿延不絕的陡坡，終於到達山頂，直觀的感受是一個脫離世俗塵囂的場所，在過程中我也發現了基地的”時間性”，包括教會中歌唱的音符、山巒雲霧的流動，藉由基地的這些元素來作為設計的切入點。
             </p>
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
+                <span class="collaborative-partner-feedback-author">建築三：王蘭昊</span>
             </div>
         </span>
     </div>
@@ -51,19 +50,45 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">化工系：洪丞昱</span>
+                <span class="collaborative-partner-feedback-author">建築二：陳琮文</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(2)"
             style="cursor: pointer;">
             <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content">
-                再加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。
+                那天，我們從都市走入一個從未到過的山林，不同的植物跟霧氣環繞，沿著陡峭的山坡一路往上爬，聽羅博士一則一則關於禱告山的故事，心裡很開心因為第一次能在這麼特別的基地做一個不同的教堂，我希望能將地景延伸到建築並創造一個內部的自然跟外部的開放空間讓當地居民可以有一個半開放的廣場，透過量體的轉角去創造虛實的空間。
             </p>
         </div>
         <div class="col-2"></div>
+    </div>
+
+    <div class="collaborative-partner-feedback-container row" data-aos="fade-left" data-aos-offset="300"
+        data-aos-easing="ease-in-sine">
+        <div class="col-xl-2 d-none d-xl-block"></div>
+        <span class="col-12 col-xl-2 d-block d-xl-none">
+            <div class="d-flex flex-column align-items-center">
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png" alt="心得作者照片" width="174"
+                    height="174">
+                <span class="collaborative-partner-feedback-author">建築三：張君睿</span>
+            </div>
+        </span>
+        <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(1)"
+            style="cursor: pointer;">
+            <div class="right-triangle d-none d-xl-block"></div>
+            <p class="collaborative-partner-feedback-content">
+                這次去石磊禱告山基地探查，雖然像是郊遊自己卻是用很虔敬朝聖般的心情去看待的，而真正挑戰是下遊覽車徒步海拔1100m高山的過程，無止盡的陡坡將體力逼迫到極限，以往看到山巒起伏很浪漫，真正進入用身體感受又是另一回事，腳所踩的、手所攀的土地、岩石成為對此基地最強烈的感受，也是進入設計發想時的主要靈感來源!
+            </p>
+        </div>
+        <span class="col-12 col-xl-2 d-none d-xl-block">
+            <div class="d-flex flex-column align-items-center">
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png" alt="心得作者照片" width="174"
+                    height="174">
+                <span class="collaborative-partner-feedback-author">建築三：張君睿</span>
+            </div>
+        </span>
     </div>
 </div>
 
@@ -127,19 +152,24 @@
 <script>
     const collaborativePartnerFeedbacks = [
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png',
-            'name': '資工系：高于梵',
-            'content': '在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的 過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/1.png',
+            'name': '建築二：盧旻慧',
+            'content': '那天，從一個繁忙的都市到一座寧靜的山林裡。山林雲霧繚繞，跟著同學從山腳走到山頂，沿路中穿梭著不同的樹蔭，感受著不同的光影，但山坡路陡的讓我們爬得汗流浹背，到禱告殿的那剎那，心中只倍感欣慰，因為「終於到了！」在禱告殿的周圍走著，觀察這裡的特色，聽著長老的解說，腦海想著各式各樣的想法。第一次面對真實的業主；第一次面對這樣山頂的地形；第一次設計精神性的建築。能這樣在學校的設計題目中擁有這樣的機會真的很難得。',
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png',
-            'name': '化工系：黃柏睿',
-            'content': '先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png',
+            'name': '建築三：王蘭昊',
+            'content': '這天我們收到新的設計題目，搭上小巴士前往位於新竹的石磊部落，步行在綿延不絕的陡坡，終於到達山頂，直觀的感受是一個脫離世俗塵囂的場所，在過程中我也發現了基地的”時間性”，包括教會中歌唱的音符、山巒雲霧的流動，藉由基地的這些元素來作為設計的切入點。',
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png',
-            'name': '化工系：洪丞昱',
-            'content': '在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png',
+            'name': '建築二：陳琮文',
+            'content': '那天，我們從都市走入一個從未到過的山林，不同的植物跟霧氣環繞，沿著陡峭的山坡一路往上爬，聽羅博士一則一則關於禱告山的故事，心裡很開心因為第一次能在這麼特別的基地做一個不同的教堂，我希望能將地景延伸到建築並創造一個內部的自然跟外部的開放空間讓當地居民可以有一個半開放的廣場，透過量體的轉角去創造虛實的空間。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png',
+            'name': '建築三：張君睿',
+            'content': '這次去石磊禱告山基地探查，雖然像是郊遊自己卻是用很虔敬朝聖般的心情去看待的，而真正挑戰是下遊覽車徒步海拔1100m高山的過程，無止盡的陡坡將體力逼迫到極限，以往看到山巒起伏很浪漫，真正進入用身體感受又是另一回事，腳所踩的、手所攀的土地、岩石成為對此基地最強烈的感受，也是進入設計發想時的主要靈感來源!',
         }
     ];
 
