--- a/Desktop/合作團隊/善循環經濟的實踐/心得回饋.html
+++ b/Desktop/合作團隊/善循環經濟的實踐/心得回饋.html
@@ -5,63 +5,18 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">資工系：高于梵</span>
+                <span class="collaborative-partner-feedback-author">同學 A</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(0)" style="cursor: pointer;">
-                在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的
-                過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
+                心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補。
             </p>
         </div>
         <div class="col-xl-2 d-none d-xl-block"></div>
-    </div>
-
-    <div class="collaborative-partner-feedback-container row" data-aos="fade-left" data-aos-offset="300"
-        data-aos-easing="ease-in-sine">
-        <div class="col-xl-2 d-none d-xl-block"></div>
-        <span class="col-12 col-xl-2 d-block d-xl-none">
-            <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
-                    height="174">
-                <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
-            </div>
-        </span>
-        <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
-            <div class="right-triangle d-none d-xl-block"></div>
-            <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(1)" style="cursor: pointer;">
-                先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。
-            </p>
-        </div>
-        <span class="col-12 col-xl-2 d-none d-xl-block">
-            <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
-                    height="174">
-                <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
-            </div>
-        </span>
-    </div>
-
-    <div class="collaborative-partner-feedback-container row" data-aos="fade-right" data-aos-offset="300"
-        data-aos-easing="ease-in-sine">
-        <span class="col-12 col-xl-2">
-            <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png" alt="心得作者照片" width="174"
-                    height="174">
-                <span class="collaborative-partner-feedback-author">化工系：洪丞昱</span>
-            </div>
-        </span>
-        <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(2)"
-            style="cursor: pointer;">
-            <div class="left-triangle d-none d-xl-block"></div>
-            <p class="collaborative-partner-feedback-content">
-                在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。
-            </p>
-        </div>
-        <div class="col-2"></div>
     </div>
 </div>
 
@@ -125,19 +80,9 @@
 <script>
     const collaborativePartnerFeedbacks = [
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png',
-            'name': '資工系：高于梵',
-            'content': '在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的 過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png',
-            'name': '化工系：黃柏睿',
-            'content': '先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png',
-            'name': '化工系：洪丞昱',
-            'content': '在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png',
+            'name': '同學 A',
+            'content': '心得待補。',
         }
     ];
 
