--- a/Desktop/合作團隊/營造永續貢學環境-文化扎根與創新/合作團隊成員.html
+++ b/Desktop/合作團隊/營造永續貢學環境-文化扎根與創新/合作團隊成員.html
@@ -5,46 +5,10 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(0)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/139540727.png" alt="成員照片" width="174"
+                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/404100551.png" alt="成員照片" width="174"
                         height="174">
-                    <p class="collaborative-partner-member-content-name">陳生明 專任教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：化學工程與生物科技系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(1)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/728190617.png" alt="成員照片" width="174"
-                        height="174">
-                    <p class="collaborative-partner-member-content-name">陳彥霖 專任副教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：資訊工程系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(2)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/368226921.png" alt="成員照片" width="174"
-                        height="174">
-                    <p class="collaborative-partner-member-content-name">劉祐綸 專任助理教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：經營管理系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(3)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/648838795.png" alt="成員照片" width="174"
-                        height="174">
-                    <p class="collaborative-partner-member-content-name">耿慶瑞 專任教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：經營管理系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(4)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/599328654.png" alt="成員照片" width="174"
-                        height="174">
-                    <p class="collaborative-partner-member-content-name">余兆偉 博士後研究員</p>
-                    <p class="collaborative-partner-member-content-department">單位：資訊工程系</p>
+                    <p class="collaborative-partner-member-content-name">楊琇惠 教授</p>
+                    <p class="collaborative-partner-member-content-department">單位：文化事業發展系</p>
                 </div>
             </div>
         </div>
@@ -97,33 +61,12 @@
 <script>
     const collaborativePartnerMember = [
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/139540727.png',
-            'name': '陳生明 教授',
-            'from': `國立台灣大學\n化學所博士`,
-            'skill': '生物感測器、化學感測器、分析化學、生物燃料電池',
-            'intro': '陳生明教授致力於貢獻研究專業、校際學術合作與產學合作，現服務於內政部臺灣化學感測器科技協會，曾接任理事長一職，積極推廣相關所學與教育訓練，讓更多的學生認識化學感測器相關領域之應用，在學術研究教學付出不遺餘力，努力培育科技產業之專業人才。近年努力實踐USR，將學術專業轉移至產業，幫助以養殖漁業為重的雲林口湖鄉。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/728190617.png',
-            'name': '陳彥霖 教授',
-            'from': `國立交通大學\n電機與控制工程研究所博士`,
-            'skill': '以視覺為基礎的人機互動操作技術（手勢辨識、人眼動態捕捉、多點觸控技術）、智慧型機器人視覺辨識控制系統、智慧型視訊監控系統與其系統晶片平台實現之研究、以電腦視覺為基礎的智慧型夜間駕駛輔助及交通監控系統、智慧物聯網',
-            'intro': '陳彥霖教授專注於整合多元嵌入式行動裝置與物聯雲霧計算平台、智慧影像分析與視覺控制系統技術，並針對工業界與消費性電子產業所使用之各種嵌入式系統與智慧終端運算平台上，進行智慧影像分析、物聯網與雲端平台、人機互動、汽車電子、機器視覺控制、智慧節能技術應用之開發，並提供最佳化實現之創新演算法技術與產業應用解決方案。近年致力於USR課程，並且引導學生發揮學校所學，以幫助自己的故鄉進行產業升級，貢獻一己之力。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/368226921.png',
-            'name': '劉祐綸 助理教授',
-            'from': `英國曼徹斯特大學\n商學院管理科學與行銷組博士`,
-            'skill': '生物感測器、化學感測器、分析化學、生物燃料電池',
-            'intro': '劉祐綸助理教授在過去九年間旅居於英國，期間分別任教於考文垂大學商學院與肯特大學商學院；研究領域為廣告行銷、品牌管理、及共享經濟與企業永續經營。目前參與USR子計畫之一的智慧物聯感測漁業計畫，主要協助雲林口湖鄉的頂湖國小推動漁場實作教學，讓食魚教育與環境保護的概念從小紮根。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/648838795.png',
-            'name': '耿慶瑞 教授',
-            'from': `國立政治大學\n企業管理所博士`,
-            'skill': '消費者行為、互動行銷、電子商務',
-            'intro': '耿慶瑞，為經營管理系教授，教授消費者行為、資訊管理、整合管理個案分析，曾任北科大管理學院EMBA執行長、經營管理系系主任、圖書館資訊組長。研究領域屬於網路消費者行為，主要可以分為服務接觸與互動技術為基礎，發展出互動行銷之廣告效果與顧客體驗價值、虛擬產品經驗與消費者決策過程(購後認知失調)、網路直播、智慧音箱互動模式等。',
-        },
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/404100551.png',
+            'name': '楊琇惠 教授',
+            'from': `國立台灣師範大學\n國文研究所博士`,
+            'skill': '中國哲學、佛教哲學、中國文學史、兒童文學、華語文教學',
+            'intro': '楊琇惠，為文化事業發展系教授兼主任，教授中國文學、宗教哲學及華語文教學。曾當選北科大人社學院優良教師，並曾擔任北科大華語文中心主任，出版多本華語文相關教材。目前致力於實踐USR，已參與過牡丹、關西及貢寮等地的社會實踐計劃。設計多元的USR課程，乃是期望學生能透過場域實作，利益偏鄉，並培養出真正的實力。',
+        }
     ];
 
     function showPartnerMemberModal(index) {
