--- a/Desktop/合作團隊/營造永續貢學環境-文化扎根與創新/合作團隊簡介.html
+++ b/Desktop/合作團隊/營造永續貢學環境-文化扎根與創新/合作團隊簡介.html
@@ -1,9 +1,17 @@
 <div class="collaborative-partner-intro-container">
     <p class="collaborative-partner-intro-content" data-aos="zoom-in" data-aos="zoom-in" data-aos-easing="ease-in-sine"
         data-aos-delay="300" data-aos-duration="1000">
-        為了幫助口湖鄉解決養殖上的一些困難，化工、資工、經管系將工業級感測器，並帶到地方文蛤池，監控水中的酸鹼度、氧化還原、溶氧量、溫度。搭配遠端伺服器與手機APP結合，就算人不再現場也能隨時知道文蛤池的狀況，當某一數據達到不理想情況
-        時，能立即知道水質發生何種問題，並加以解決，顛覆傳統以看水池顏色或是以水就口的方式，更能達到池內的理想狀態，進而提高產量。<br><br>再者，我們持續開發與連絡口湖地方上的相關夥伴，如雲林縣口湖鄉埔北社區發展協會的理事長，藉由與他的深度訪談，可以了
-        解雲林的真實情況還有他們的需求，並且詢問他們對於農林漁牧業導入科技的態度，最重要的是在訪談結束後與團隊討論，要如何發揮我們在大學所學知識給予他們需要的協助，期望可以改善他們目前的情況。<br>
+        一、執行團隊：<br>
+        依據場域需求，號召相關跨域、跨校教師資源，實踐計畫內容。
+        <br><br>
+        二、執行策略與方法：<br>
+        本計畫透過「盤點在地文化資本、建立優質共學環境、翻轉在地文化資本」三項執行策略，搭配大學課程內容，藉由辦理符合在地特色需求之主題式增能活動，包含協助當地繪製文化地圖、帶領國中小學生製作家鄉紀錄片、辦理相關沙龍講座與實作工作坊、美化老街景等方法，凝聚社區共識，使社區及老街活絡。
+        <br><br>
+        三、預計投入之經費及資源：<br>
+        本計畫與新北市城鄉發展局、貢寮區公所、當地里長、當地國中小學：和美國小、貢寮國中及新北市工作者協會、人禾環境倫理發展基金會合作，結合本校文化事業發展系與大學社會責任辦公室之資源，齊心將老街文化、歷史、宗教做調查與分析，盤點在地人的生活樣態。
+        <br><br>
+        四、課程設計：<br>
+        除導入本校文化事業發展系教師群之課程，如：【文學史、口述歷史與田野調查、宗教概論、展演藝術與表達、紀錄片攝製、文化產品行銷與管理】外，亦作跨領域課程安排，如：本校通識中心開設之【攝影與社會課程、創業計畫書撰寫、創業之品牌管理與行銷】等課程師資。
     </p>
 </div>
 
