--- a/Desktop/合作團隊/陶藝文化培力．鶯歌地方創生/心得回饋.html
+++ b/Desktop/合作團隊/陶藝文化培力．鶯歌地方創生/心得回饋.html
@@ -5,16 +5,15 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/1.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">資工系：高于梵</span>
+                <span class="collaborative-partner-feedback-author">同學 A</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(0)" style="cursor: pointer;">
-                在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的
-                過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
+                世事總是伴隨時光產生千變萬化的可能性。於鶯歌我們窺見台灣陶瓷產業的璀璨風采，身為陶瓷的心臟地，其盡職盡責地將陶藝之血打入這片土地的四肢百骸，今日雖已逐漸式微，我們卻依舊能於感受到其富有活力並於此暗中洶湧、交織。因此，「地方創生」便試圖將台灣陶瓷產業的可能性以更加多元的面貌體現，賦予全新定位，使鶯歌令人雋永的工藝美學及歷史文化得以萬代千秋。
             </p>
         </div>
         <div class="col-xl-2 d-none d-xl-block"></div>
@@ -25,22 +24,22 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
+                <span class="collaborative-partner-feedback-author">同學 B</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="right-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(1)" style="cursor: pointer;">
-                先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。
+                身處過輝煌時期的師傅想要傳承卻已經無力再革新，投入教育現場，真正日後投入產業的人極少，市場的變遷及從業氛圍也讓人卻步。透過USR計畫的執行，篩選真的想投入行業的學員，在執行層面以及最終的成果展現，更能有實質的成效。
             </p>
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
+                <span class="collaborative-partner-feedback-author">同學 B</span>
             </div>
         </span>
     </div>
@@ -49,16 +48,16 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/5.png" alt="心得作者照片" width="174"
                     height="174">
-                <span class="collaborative-partner-feedback-author">化工系：洪丞昱</span>
+                <span class="collaborative-partner-feedback-author">同學 C</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0" onclick="showFeedbackModal(2)"
             style="cursor: pointer;">
             <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content">
-                在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。
+                鶯歌代表著台灣陶瓷的生命力，富有創意的創作者，帶著勇氣在這片土地打拼，在200年前就開始努力創新。透過在地創生，希望能再次繁榮此地，為鶯歌帶來新氣象。時代在進步，而鶯歌擁有絕佳的基礎，相信未來能再回到世界舞台。
             </p>
         </div>
         <div class="col-2"></div>
@@ -125,19 +124,19 @@
 <script>
     const collaborativePartnerFeedbacks = [
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png',
-            'name': '資工系：高于梵',
-            'content': '在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的 過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。',
+            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/1.png',
+            'name': '同學 A',
+            'content': '世事總是伴隨時光產生千變萬化的可能性。於鶯歌我們窺見台灣陶瓷產業的璀璨風采，身為陶瓷的心臟地，其盡職盡責地將陶藝之血打入這片土地的四肢百骸，今日雖已逐漸式微，我們卻依舊能於感受到其富有活力並於此暗中洶湧、交織。因此，「地方創生」便試圖將台灣陶瓷產業的可能性以更加多元的面貌體現，賦予全新定位，使鶯歌令人雋永的工藝美學及歷史文化得以萬代千秋。',
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png',
-            'name': '化工系：黃柏睿',
-            'content': '先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。',
+            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/3.png',
+            'name': '同學 B',
+            'content': '身處過輝煌時期的師傅想要傳承卻已經無力再革新，投入教育現場，真正日後投入產業的人極少，市場的變遷及從業氛圍也讓人卻步。透過USR計畫的執行，篩選真的想投入行業的學員，在執行層面以及最終的成果展現，更能有實質的成效。',
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png',
-            'name': '化工系：洪丞昱',
-            'content': '在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。',
+            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/5.png',
+            'name': '同學 C',
+            'content': '鶯歌代表著台灣陶瓷的生命力，富有創意的創作者，帶著勇氣在這片土地打拼，在200年前就開始努力創新。透過在地創生，希望能再次繁榮此地，為鶯歌帶來新氣象。時代在進步，而鶯歌擁有絕佳的基礎，相信未來能再回到世界舞台。',
         }
     ];
 
