--- a/Desktop/合作團隊/善循環經濟的實踐/合作團隊簡介.html
+++ b/Desktop/合作團隊/善循環經濟的實踐/合作團隊簡介.html
@@ -1,9 +1,11 @@
 <div class="collaborative-partner-intro-container">
     <p class="collaborative-partner-intro-content" data-aos="zoom-in" data-aos="zoom-in" data-aos-easing="ease-in-sine"
         data-aos-delay="300" data-aos-duration="1000">
-        為了幫助口湖鄉解決養殖上的一些困難，化工、資工、經管系將工業級感測器，並帶到地方文蛤池，監控水中的酸鹼度、氧化還原、溶氧量、溫度。搭配遠端伺服器與手機APP結合，就算人不再現場也能隨時知道文蛤池的狀況，當某一數據達到不理想情況
-        時，能立即知道水質發生何種問題，並加以解決，顛覆傳統以看水池顏色或是以水就口的方式，更能達到池內的理想狀態，進而提高產量。<br><br>再者，我們持續開發與連絡口湖地方上的相關夥伴，如雲林縣口湖鄉埔北社區發展協會的理事長，藉由與他的深度訪談，可以了
-        解雲林的真實情況還有他們的需求，並且詢問他們對於農林漁牧業導入科技的態度，最重要的是在訪談結束後與團隊討論，要如何發揮我們在大學所學知識給予他們需要的協助，期望可以改善他們目前的情況。<br>
+        一、專業領域知識課程由北科大工設系，南臺科大創新產品設計系開設2門課，預計與光寶科技、翰品酒店、小智研發、循環台灣基金會、荒野保護協會等公司合作投入循環經濟、永續設計等實務案例課程和講座等。
+        <br><br>
+        二、潛在場域及合作內容：金山永民社區為計畫協助之偏鄉，希望以創新為核心，規劃海廢企畫方案和海廢創意燈具改善社區景觀、海洋永續的淨灘體驗、金山磺火捕魚在地文化呈現和遊客海廢DIY課程等，希望讓社區建構永續發展目標外，亦期許能協助脆弱家庭及其在學子弟改善生活。合作單位：由金山永民社區發展協會協助在地溝通，聯繫脆弱家庭及其在學子弟，提供相關培訓與協助。
+        <br><br>
+        三、首波合作機構：包含光寶科技、CircuPlus、荒野保護協會及北市金山區永興里永民社區，預計每年協同合作夥伴辦理相關海洋永續、淨灘體驗與永續設計等活動，共同協助脆弱家庭孩子建立與培養在地永續發展之必要知能與視野。
     </p>
 </div>
 
