--- a/Desktop/合作團隊/青銀共創．友善療癒綠社區/合作團隊簡介.html
+++ b/Desktop/合作團隊/青銀共創．友善療癒綠社區/合作團隊簡介.html
@@ -1,9 +1,8 @@
 <div class="collaborative-partner-intro-container">
     <p class="collaborative-partner-intro-content" data-aos="zoom-in" data-aos="zoom-in" data-aos-easing="ease-in-sine"
         data-aos-delay="300" data-aos-duration="1000">
-        為了幫助口湖鄉解決養殖上的一些困難，化工、資工、經管系將工業級感測器，並帶到地方文蛤池，監控水中的酸鹼度、氧化還原、溶氧量、溫度。搭配遠端伺服器與手機APP結合，就算人不再現場也能隨時知道文蛤池的狀況，當某一數據達到不理想情況
-        時，能立即知道水質發生何種問題，並加以解決，顛覆傳統以看水池顏色或是以水就口的方式，更能達到池內的理想狀態，進而提高產量。<br><br>再者，我們持續開發與連絡口湖地方上的相關夥伴，如雲林縣口湖鄉埔北社區發展協會的理事長，藉由與他的深度訪談，可以了
-        解雲林的真實情況還有他們的需求，並且詢問他們對於農林漁牧業導入科技的態度，最重要的是在訪談結束後與團隊討論，要如何發揮我們在大學所學知識給予他們需要的協助，期望可以改善他們目前的情況。<br>
+        開授結合建築設計及環境心理學等課程，以此為理論基礎，深入北科大鄰近社區，配合里辦、友善企業及長照團隊，以民輝里與昌隆里為行動方案之實踐社區，讓學生深入社區，主動關心周遭環境與居民，並延續本校於 2009
+        年社區人文生態校園營造之願景，藉由閒置空間再利用為高齡者長照場域如社區共餐空間、微型日照中心等，並結合綠化設計達到療癒之成效。<br>
     </p>
 </div>
 
